# seq_pipeline

./: AUTHORS  ChangeLog  package.py  requirements.txt  setup.cfg
pipeline/: __init__.py  __main__.py  common.py  setup.py
pipeline/analysis/: __init__.py  _crispr_screening.py  _rna.py
pipeline/plot/: __init__.py  _crispr_screening.py  _quality_control.py
pipeline/preprocess/: __init__.py  _scanpy.py  _shell_command_generater.py  crispr_screening.py
pipeline/preprocess/rscript/: ensg_to_gene.py
pipeline/preprocess/shell_template/: __init__.py  _align.py  _chip.py  _crispr_screening.py  _quality_control.py  _recipe.py  _rna.py  _snp.py
test/: test.py
