
[metadata]
name = pipeline
author = Tang Hongzhen
author-email = tanghongzhen34@gmail.com
summary = awsome project created by pycman.
license = MIT
description-file = 
    README.rst
home-page = http://example.com
requires-python = >= 3.6

[files]
packages = 
    pipeline


[entry_points]
console_scripts =
    cmd=package.module:function
